Correção da posição das chamadas dos arquivos JS nas páginas para funcionamneto das mascaras. Inclusão de um espeço depois da tag I nos "titulos de formulários" via CSS para permitir a retirada do espaço via &nbsp;

--- a/petshop2/src/main/resources/templates/administracao/usuario/editar-usuario.html
+++ b/petshop2/src/main/resources/templates/administracao/usuario/editar-usuario.html
@@ -23,7 +23,7 @@
 	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
 		
 			<h1 class="titulo-formulario"><i class="fas fa-user-edit"></i>
-			&nbsp;Editar usuário: <span class="nomeDestaque" th:text="${usuario.cpf}"></span> </h1>
+			Editar usuário: <span class="nomeDestaque" th:text="${usuario.cpf}"></span> </h1>
 			
 
 			<form name="formulario" method="POST" class="form-vertical  js-form-loading"
