--- a/petshop2/src/main/resources/templates/animais/cadastro-animal.html
+++ b/petshop2/src/main/resources/templates/animais/cadastro-animal.html
@@ -27,7 +27,7 @@
 <body>
 	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
 		
-			<h1 class="titulo-formulario"><i class="fas fa-paw"></i>&nbsp;Cadastro de animais para o cliente: 
+			<h1 class="titulo-formulario"><i class="fas fa-paw"></i>Cadastro de animais para o cliente: 
 				<span class="nomeDestaque" th:text="${animal.cliente.nome}"></span>
 			</h1>
 
