--- a/petshop2/src/main/resources/templates/animais/lista-animais.html
+++ b/petshop2/src/main/resources/templates/animais/lista-animais.html
@@ -11,7 +11,7 @@
 
 	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
 		
-			<h1 class="titulo-formulario"><i class="fas fa-list"></i>&nbsp;Animais</h1>
+			<h1 class="titulo-formulario"><i class="fas fa-list"></i>Animais</h1>
 			
 			<div class="alert  alert-success"
 				th:if="${!#strings.isEmpty(mensagem)}">
