--- a/petshop2/src/main/resources/templates/atendimento/cliente/lista-cliente-e-animais.html
+++ b/petshop2/src/main/resources/templates/atendimento/cliente/lista-cliente-e-animais.html
@@ -11,7 +11,7 @@
 	<section layout:fragment="content">
 		<div class="layout-pagina">
 		
-		<h1 class="titulo-formulario"><i class="far fa-handshake"></i>&nbsp;
+		<h1 class="titulo-formulario"><i class="far fa-handshake"></i>
 			Cliente: <span class="nomeDestaque" th:text="${cliente.nome}"></span>
 		</h1>
 		
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 				
-			<h1 class="titulo-formulario"><i class="fa fa-paw"></i>&nbsp;Animais</h1>
+			<h1 class="titulo-formulario"><i class="fa fa-paw"></i>Animais</h1>
 			
 			<div class="table-responsive-sm">
 				<table id="tabela-animais"
