--- a/petshop2/src/main/resources/templates/atendimento/cliente/lista-clientes-inativos.html
+++ b/petshop2/src/main/resources/templates/atendimento/cliente/lista-clientes-inativos.html
@@ -11,7 +11,7 @@
 	<section layout:fragment="content">
 		<div class="layout-pagina">
 		
-			<h1 class="titulo-formulario"><i class="fas fa-user-slash"></i>&nbsp;Clientes inativos</h1>
+			<h1 class="titulo-formulario"><i class="fas fa-user-slash"></i>Clientes inativos</h1>
 			
 			<div class="pesquisa">
 				<form method="GET" class="form-inline" action="/atendimento/clientes/inativos" th:object="${filtro}">
