--- a/petshop2/src/main/resources/templates/atendimento/consulta/atender-consulta.html
+++ b/petshop2/src/main/resources/templates/atendimento/consulta/atender-consulta.html
@@ -10,7 +10,7 @@
 	<section layout:fragment="content">	
 		<div class="layout-pagina">
 		
-			<h1 class="titulo-formulario"><i class="fas fa-user-md"></i>&nbsp;Atendimento de consultas</h1>
+			<h1 class="titulo-formulario"><i class="fas fa-user-md"></i>Atendimento de consultas</h1>
 
 			<form name="formulario" method="POST" class="form-vertical  js-form-loading"
 				th:object="${consulta}" th:action="@{/atendimento/consultas/salvar}">
