--- a/petshop2/src/main/resources/templates/atendimento/consulta/cadastro-consulta.html
+++ b/petshop2/src/main/resources/templates/atendimento/consulta/cadastro-consulta.html
@@ -9,7 +9,7 @@
 <body>
 	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">	
 		
-			<h1 class="titulo-formulario"><i class="fas fa-notes-medical"></i>&nbsp;
+			<h1 class="titulo-formulario"><i class="fas fa-notes-medical"></i>
 				Cadastro de consulta para o animal: <span class="nomeDestaque" th:text="${consulta.animal.nome}"></span>
 			</h1>
 
