--- a/petshop2/src/main/resources/templates/atendimento/servico/cadastro-servicos.html
+++ b/petshop2/src/main/resources/templates/atendimento/servico/cadastro-servicos.html
@@ -4,6 +4,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/layout}">
 <head>
+	<title>Cadastro de Serviçs</title>
 	<script th:src="@{/javascripts/jquery.mask.min.js}"></script>
 	<script th:src="@{/js/mascaras.js}"></script>
 </head>
@@ -12,7 +13,7 @@
 		<div class="layout-pagina">
 
 			<h1 class="titulo-formulario">
-				<i class="fa fa-cart-arrow-down"></i>&nbsp;Cadastro de Serviço
+				<i class="fa fa-cart-arrow-down"></i>Cadastro de Serviço
 			</h1>
 
 			<form name="formulario" method="POST"
