--- a/petshop2/src/main/resources/templates/fornecedores/lista-fornecedores.html
+++ b/petshop2/src/main/resources/templates/fornecedores/lista-fornecedores.html
@@ -10,7 +10,7 @@
 
 	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
 			
-			<h1 class="titulo-formulario"><i class="fas fa-list"></i>&nbsp;Fornecedores</h1>
+			<h1 class="titulo-formulario"><i class="fas fa-list"></i>Fornecedores</h1>
 			
 			<div class="alert  alert-success"
 				th:if="${!#strings.isEmpty(mensagem)}">
