--- a/petshop2/src/main/resources/templates/administracao/usuario/cadastro-usuario.html
+++ b/petshop2/src/main/resources/templates/administracao/usuario/cadastro-usuario.html
@@ -4,34 +4,36 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layout/layout}">
 <head>
-	<script th:src="@{/js/BuscaCEP.js}"></script>
-	<script th:src="@{/javascripts/jquery.mask.min.js}"></script>
-	<script th:src="@{/js/mascaras.js}"></script>
-	<script th:src="@{/webjars/jquery.inputmask/4.0.5/jquery.inputmask.bundle.js}"></script>
-	<script type="text/javascript">
-		$(document).ready(function() {
+<title>Cadastro de Usuários</title>
+<script th:src="@{/js/BuscaCEP.js}"></script>
+		<script th:src="@{/js/jquery.mask.min.js}"></script>
+		<script th:src="@{/webjars/jquery.inputmask/4.0.5/jquery.inputmask.bundle.js}"></script>
+		<script th:src="@{/js/mascaras.js}"></script>
+		<script type="text/javascript">
+			$(document).ready(function() {
+		
+				$(".fone").inputmask({
+					mask : [ "(99) 9999-9999", "(99) 99999-9999", ],
+					keepStatic : true
+				});
 	
-			$(".fone").inputmask({
-				mask : [ "(99) 9999-9999", "(99) 99999-9999", ],
-				keepStatic : true
 			});
-
-		});
-	</script>
+		</script>
+		
+		<script type="text/javascript">
+			function preencher_cpf(el)
+			{
+				document.getElementById('senha').value = el.value.replace(/\D/g, '');
+				document.getElementById('login').value = el.value.replace(/\D/g, '');
+			}
+		</script>
 	
-	<script type="text/javascript">
-		function preencher_cpf(el)
-		{
-			document.getElementById('senha').value = el.value.replace(/\D/g, '');
-			document.getElementById('login').value = el.value.replace(/\D/g, '');
-		}
-	</script>
 </head>
 
 <body>
 	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
 		
-			<h1 class="titulo-formulario"><i class="fas fa-user-plus"></i>&nbsp;Cadastro de usuário</h1>
+			<h1 class="titulo-formulario"><i class="fas fa-user-plus"></i>Cadastro de usuário</h1>
 			
 			<form name="formulario" method="POST" class="form-vertical  js-form-loading"
 				th:object="${usuario}" th:action="@{/administracao/usuarios/salvar}">
@@ -62,24 +64,24 @@
 					
 					<div class="col-sm-2">
 						<div class="form-group">
-							<label for="cpf">CPF<span class="obrigatorio"> *</span></label>
+							<label class="campo_obrigatorio" for="cpf">CPF</label>
 							<input id="cpf" type="text"	class="form-control cpf" onblur="preencher_cpf(this)" 
 							placeholder="Ex: 000.000.000-00" th:field="*{cpf}" />
 						</div>
 					</div>
 				
 					<div class="col-sm-4 form-group" th:classappend="${#fields.hasErrors('nome')} ? has-error">
-						<label for="nome">Nome<span class="obrigatorio"> *</span></label>
+						<label class="campo_obrigatorio" for="nome">Nome</label>
 						<input id="nome" type="text" class="form-control" th:field="*{nome}" />
 					</div>
 					
 					<div class="col-sm-4 form-group" th:classappend="${#fields.hasErrors('email')} ? has-error">
-						<label for="email">E-mail<span class="obrigatorio"> *</span></label>
+						<label class="campo_obrigatorio" for="email">E-mail</label>
 						<input id="email" class="form-control" th:field="*{email}" type="text" placeholder="seunome@dominio.com.br" title="E-mail"/>
 					</div>
 					
 					<div class="col-sm-2 form-group" th:classappend="${#fields.hasErrors('permissoes')} ? has-error">
-						<label for="permissao">Permissão<span class="obrigatorio"> *</span></label>
+						<label class="campo_obrigatorio" for="permissao">Permissão</label>
 						
 						<select id="permissao" class="form-control" th:field="*{permissoes}">
 							<option value="">Selecione o tipo de permissão</option>
@@ -93,7 +95,7 @@
 				<div class="row">
 				
 					<div class="col-sm-2 form-group">
-						<label for="telefone1">Telefone principal<span class="obrigatorio"> *</span></label>
+						<label class="campo_obrigatorio" for="telefone1">Telefone principal</label>
 						<input id="telefone1" type="text" class="form-control fone" th:field="*{telefone1}"/>
 					</div>
 							
@@ -178,9 +180,7 @@
 						</a>
 					</div>
 				</div>
-				
 			</form>
-			
 	</section>
 </body>
 </html>
