--- a/petshop2/src/main/resources/templates/fornecedores/lista-fornecedor-e-produtos.html
+++ b/petshop2/src/main/resources/templates/fornecedores/lista-fornecedor-e-produtos.html
@@ -11,7 +11,7 @@
 	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
 
 			<h1 class="titulo-formulario">
-				<i class="far fa-handshake"></i>&nbsp; Fornecedor: <span
+				<i class="far fa-handshake"></i>Fornecedor: <span
 					class="nomeDestaque" th:text="${fornecedor.nome}"></span>
 			</h1>
 
@@ -78,7 +78,7 @@
 			</div>
 
 			<h1 class="titulo-formulario">
-				<i class="fas fa-list"></i>&nbsp;Produtos
+				<i class="fas fa-list"></i>Produtos
 			</h1>
 
 			<div class="pesquisa">
