Ajustes diversos nos layouts das páginas de cadastro e pesquisa para permitir a visualização completa com o menu lateral. Ajustes nos métodos de pesquisa de alguns dos modelos para carregar a lista corretamente. Alteração do properties e liberação da classe MainConfig para publicar a aplicação no Heroku. Ajustes e inclusão de alguns estilos para facilitar e melhorar a formatação das informações nas páginas de cadastro e pesquisa.

--- a/petshop2/src/main/resources/static/css/estilo_IridiumIT.css
+++ b/petshop2/src/main/resources/static/css/estilo_IridiumIT.css
@@ -55,7 +55,7 @@
 	padding: 25px;
 	background-color: #484848;
 	color: #fff;
-	position: fixed;
+	position: relative;
 	left: 0;
 	bottom: 0;
 	width: 100%;
@@ -96,6 +96,10 @@
 	font-weight: normal;
 }
 
+.titulo-lista {
+	margin-top: 15px;
+}
+
 .titulo-formulario i {
 	margin-right: 5px;
 }
@@ -110,5 +114,15 @@
 	content: " *";
 	color: red;
 	font-weight: bold;
+}
+
+.text-primary {
+	font-weight: bold;
+}
+
+.form-group p {
+	margin-top: 0;
+	padding-top: 0;
+	line-height: 1;
 }
 
