--- a/petshop2/src/main/resources/templates/administracao/usuario/lista-usuarios.html
+++ b/petshop2/src/main/resources/templates/administracao/usuario/lista-usuarios.html
@@ -31,8 +31,10 @@
 						</div>
 				</form>
 			</div>
+			
+			<div class="form-row">
 
-				<div class="table-responsive-sm">
+				<div class="table-responsive-sm col-sm-12">
 					<table id="tabela-produtos"
 						class="table  table-sm table-striped  table-bordered  table-hover  table-condensed  js-sticky-table">
 						<thead>
@@ -76,6 +78,7 @@
 						</tbody>
 					</table>
 				</div>
+			</div>
 	</section>
 </body>
 </html>
