--- a/petshop2/src/main/resources/templates/animais/cadastro-animal.html
+++ b/petshop2/src/main/resources/templates/animais/cadastro-animal.html
@@ -57,7 +57,7 @@
 				<input type="hidden" th:field="*{cliente}" />
 				<input type="hidden" id="resp_cadastro" name="resp_cadastro" th:value="${#authentication.principal.nome}"/>
 
-				<div class="row">
+				<div class="form-row">
 					
 					<div class="col-sm-4">
 						<div class="form-group">
@@ -111,7 +111,7 @@
 					
 				</div>
 				
-				<div class="row">
+				<div class="form-row">
 				
 					<div class="col-sm-1">
 						<div class="form-check">
@@ -154,12 +154,12 @@
 				</div>
 				
 				<div class="container">
-					<div class="row justify-content-between">
+					<div class="form-row justify-content-between">
 						
-						<button class="btn  btn-primary btn-sm col-sm-1 "type="submit" title="Salvar">
+						<button class="btn  btn-primary btn-sm col-sm-2 "type="submit" title="Salvar">
 							<i class="far fa-save"></i> Salvar
 						</button>
-						<a id="btncancelar" class="btn btn-warning btn-sm col-sm-1"
+						<a id="btncancelar" class="btn btn-warning btn-sm col-sm-2"
 							th:href="@{/atendimento/clientes/selecao/{id}(id=${animal.cliente.id})}" th:title="'Cancelar operação'"> 
 							<i class="far fa-window-close"></i> Cancelar
 						</a>
