--- a/petshop2/src/main/resources/templates/animais/lista-animais.html
+++ b/petshop2/src/main/resources/templates/animais/lista-animais.html
@@ -32,8 +32,10 @@
 				</div>
 			</form>
 			</div>
+			
+			<div class="form-row">
 
-			<div class="table-responsive-sm">
+			<div class="table-responsive-sm col-sm-12">
 				<table id="tabela-animais"
 					class="table  table-sm table-striped  table-bordered  table-hover  table-condensed  js-sticky-table">
 					<thead>
@@ -93,6 +95,7 @@
 					</tbody>
 				</table>
 			</div>
+		</div>
 	</section>
 
 </body>
