--- a/petshop2/src/main/resources/templates/layout/fragments/menu.html
+++ b/petshop2/src/main/resources/templates/layout/fragments/menu.html
@@ -114,7 +114,7 @@
 							<span class="d-none d-md-inline">Usuários</span>
     					</a>
     					<a href="/atendimento/clientes" class="list-group-item" sec:authorize="hasRole('PS_ATENDIMENTO') or hasRole('PS_ADMIN')">
-							<i class="fas fa-address-card"></i>
+							<i class="far fa-handshake"></i>
 							<span class="d-none d-md-inline">Clientes</span>
     					</a>
 						<a href="/atendimento/clientes/inativos" class="list-group-item" sec:authorize="hasRole('PS_ADMIN')">
