--- a/petshop2/src/main/resources/templates/layout/layout.html
+++ b/petshop2/src/main/resources/templates/layout/layout.html
@@ -8,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Aplicação</title>
+<title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Gestão PetShop</title>
 
 <link th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" rel="stylesheet" />
 <link th:href="@{/webjars/font-awesome/5.10.1/css/all.css}" rel="stylesheet" />
