--- a/petshop2/src/main/resources/templates/administracao/usuario/editar-usuario.html
+++ b/petshop2/src/main/resources/templates/administracao/usuario/editar-usuario.html
@@ -23,7 +23,7 @@
 	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
 		
 			<h1 class="titulo-formulario"><i class="fas fa-user-edit"></i>
-			Editar usuário: <span class="nomeDestaque" th:text="${usuario.cpf}"></span> </h1>
+			Editar usuário: <span class="text-primary" th:text="${usuario.cpf}"></span> </h1>
 			
 
 			<form name="formulario" method="POST" class="form-vertical  js-form-loading"
@@ -54,7 +54,7 @@
 				<input type="hidden" th:field="*{endereco}" />
 				
 				
-				<div class="row">
+				<div class="form-row">
 				
 					<div class="col-sm-2 form-group">
 						<label for="login">Login</label>
@@ -62,17 +62,17 @@
 					</div>
 					
 					<div class="col-sm-4 form-group">
-						<label for="nome">Nome</label>
+						<label class="campo_obrigatorio" for="nome">Nome</label>
 						<input id="nome" type="text" class="form-control" th:field="*{nome}" />
 					</div>
 					
 					<div class="col-sm-4 form-group">
-						<label for="email">E-mail</label>
+						<label class="campo_obrigatorio" for="email">E-mail</label>
 						<input id="email" type="text" class="form-control" th:field="*{email}" />
 					</div>
 					
 					<div class="col-sm-2 form-group">
-						<label for="permissao">Permissão</label>
+						<label class="campo_obrigatorio" for="permissao">Permissão</label>
 						
 						<select id="permissao" class="form-control" th:field="*{permissoes}">
 							<option th:each="permissao: ${permissoes}"
@@ -82,10 +82,10 @@
 					
 				</div>
 				
-				<div class="row">
+				<div class="form-row">
 				
 					<div class="col-sm-2 form-group">
-						<label for="telefone1">Telefone principal<span class="obrigatorio"> *</span></label>
+						<label class="campo_obrigatorio" for="telefone1">Telefone principal</label>
 						<input id="telefone1" type="text" class="form-control fone" th:field="*{telefone1}"/>
 					</div>
 							
@@ -105,7 +105,7 @@
 					
 				</div>
 				
-				<div class="row">
+				<div class="form-row">
 					
 					<div class="col-sm-3">
 						<div class="form-group">
@@ -134,7 +134,7 @@
 				
 				</div>
 				
-				<div class="row">
+				<div class="form-row">
 					
 					<div class="col-sm-3">
 						<div class="form-group">
@@ -159,11 +159,10 @@
 				
 				<div class="container">
 					<div class="row justify-content-between">
-						
-						<button class="btn  btn-primary btn-sm col-sm-1 "type="submit" title="Salvar">
+						<button class="btn  btn-primary btn-sm col-sm-2" type="submit" title="Salvar">
 							<i class="far fa-save"></i> Salvar
 						</button>
-						<a id="btncancelar" class="btn btn-warning btn-sm col-sm-1"
+						<a id="btncancelar" class="btn btn-warning btn-sm col-sm-2"
 							th:href="@{/administracao/usuarios}" th:title="'Cancelar operação'"> 
 							<i class="far fa-window-close"></i> Cancelar
 						</a>
