--- a/petshop2/src/main/resources/templates/atendimento/cliente/lista-cliente-e-animais.html
+++ b/petshop2/src/main/resources/templates/atendimento/cliente/lista-cliente-e-animais.html
@@ -12,7 +12,7 @@
 		<div class="layout-pagina">
 		
 		<h1 class="titulo-formulario"><i class="far fa-handshake"></i>
-			Cliente: <span class="nomeDestaque" th:text="${cliente.nome}"></span>
+			Cliente: <span class="nomeDestaque text-primary" th:text="${cliente.nome}"></span>
 		</h1>
 		
 		<div class="alert  alert-success"
@@ -23,66 +23,68 @@
 		
 			<input type="hidden" th:field="*{id}" />
 			
-			<div class="row">
+			<div class="form-row">
 			
-				<div class="col-sm-2 dadosDestaque">
+				<div class="col-sm-3">
 					<div class="form-group">
 						<label>Data de nascimento</label>
-						<p class="form-group" th:text="${cliente.getDataFormatada(cliente.data_nasc)}"></p>
+						<p class="form-group text-primary" th:text="${cliente.getDataFormatada(cliente.data_nasc)}"></p>
 					</div>
 				</div>
 				
-				<div class="col-sm-2 dadosDestaque">
+				<div class="col-sm-3">
 					<div class="form-group">
 						<label>CPF</label>
-						<p class="form-group" th:text="${cliente.cpf}"></p>
+						<p class="form-group text-primary" th:text="${cliente.cpf}"></p>
 					</div>
 				</div>
 			
-				<div class="col-sm-4 dadosDestaque">
+				<div class="col-sm-4">
 					<div class="form-group">
 						<label>E-mail</label>
-						<p class="form-group" th:text="${cliente.email}"></p>
+						<p class="form-group text-primary" th:text="${cliente.email}"></p>
 					</div>
 				</div>
 				
-				<div class="col-sm-2 dadosDestaque">
+				<div class="col-sm-2">
 					<div class="form-group">
 						<label>Telefone principal</label>
-						<p class="form-group" th:text="${cliente.telefone1}"></p>
+						<p class="form-group text-primary" th:text="${cliente.telefone1}"></p>
 					</div>
 				</div>
 				
 			</div>
 			
-			<div class="row">
+			<div class="form-row">
 			
-				<div class="col-sm-12 dadosDestaque">
-					<div class="form-group">
-						<label>Endereço</label>
-						<p class="form-group" th:text="${cliente.endereco.getEndereco()}"></p>
-					</div>
+				<div class="col-sm-12">
+						<p class="form-group" >
+							Endereço: <span class="text-primary" th:text="${cliente.endereco.getEndereco()}">
+							</span>
+						</p>
 				</div>			
 				
 			</div>
 			
 			<div class="container">
-				<div class="row justify-content-between">
+				<div class="form-row justify-content-between">
 					
-					<a id="btnincluiranimal" class="btn btn-success btn-sm col-sm-1"
+					<a id="btnincluiranimal" class="btn btn-success btn-sm col-sm-2"
 						th:href="@{/clientes/animais/incluirAnimal/{id}(id=${cliente.id})}" th:title="'Incluir Animais'">
 						<span class="fa fa-paw"></span> Animal
 					</a>
-					<a id="btneditarcliente" class="btn btn-primary btn-sm col-sm-1"
+					<a id="btneditarcliente" class="btn btn-primary btn-sm col-sm-2"
 						th:href="@{/atendimento/clientes/editar/{id}(id=${cliente.id})}" th:title="'Editar Cliente'"> 
 						<span class="fa fa-pencil-alt"></span> Editar
 					</a>
 				</div>
 			</div>
 				
-			<h1 class="titulo-formulario"><i class="fa fa-paw"></i>Animais</h1>
+			<h1 class="titulo-formulario titulo-lista"><i class="fa fa-paw"></i>Animais</h1>
 			
-			<div class="table-responsive-sm">
+			<div class="form-row">
+			
+			<div class="table-responsive-sm col-sm-12">
 				<table id="tabela-animais"
 					class="table  table-sm table-striped  table-bordered  table-hover  table-condensed  js-sticky-table">
 					<thead>
@@ -136,6 +138,7 @@
 						</tr>
 					</tbody>
 				</table>
+			</div>
 			</div>
 		</div>
 	</section>
