--- a/petshop2/src/main/resources/templates/fornecedores/lista-fornecedores.html
+++ b/petshop2/src/main/resources/templates/fornecedores/lista-fornecedores.html
@@ -8,31 +8,36 @@
 
 <body>
 
-	<section class="aw-layout-content  js-content layout-pagina" layout:fragment="content">
-			
-			<h1 class="titulo-formulario"><i class="fas fa-list"></i>Fornecedores</h1>
-			
-			<div class="alert  alert-success"
-				th:if="${!#strings.isEmpty(mensagem)}">
-				<i class="fa fa-check-circle"></i>
-				<span th:text="${mensagem}">Mensagem sucesso!</span>
-			</div>
-			
-			<div class="pesquisa">
-				<form method="GET" class="form-inline" action="/fornecedores" th:object="${filtro}">
-						<div class="input-group col-sm-4">
-							<input class="form-control"	placeholder="Qual fornecedor você está procurando?"
-									autofocus="autofocus" th:field="*{nome}">
-							<div class="input-group-append">
-								<button type="submit" class="btn btn-default">
-									<i class="fas fa-search"></i>
-								</button>
-							</div>
-						</div>
-				</form>
-			</div>
+	<section class="aw-layout-content  js-content layout-pagina"
+		layout:fragment="content">
 
-			<div class="table-responsive-sm">
+		<h1 class="titulo-formulario">
+			<i class="fas fa-list"></i>Fornecedores
+		</h1>
+
+		<div class="alert  alert-success"
+			th:if="${!#strings.isEmpty(mensagem)}">
+			<i class="fa fa-check-circle"></i> <span th:text="${mensagem}">Mensagem
+				sucesso!</span>
+		</div>
+
+		<div class="pesquisa">
+			<form method="GET" class="form-inline" action="/fornecedores"
+				th:object="${filtro}">
+				<div class="input-group col-sm-4">
+					<input class="form-control"
+						placeholder="Qual fornecedor você está procurando?"
+						autofocus="autofocus" th:field="*{nome}">
+					<div class="input-group-append">
+						<button type="submit" class="btn btn-default">
+							<i class="fas fa-search"></i>
+						</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="form-row">
+			<div class="table-responsive-sm col-sm-12">
 				<table id="tabela-produtos"
 					class="table  table-sm table-striped  table-bordered  table-hover  table-condensed  js-sticky-table">
 					<thead>
@@ -46,21 +51,22 @@
 					<tbody>
 						<tr th:each="fornecedor: ${fornecedores}">
 							<td th:text="${fornecedor.cnpj} + ' - ' + ${fornecedor.nome}">fornecedor1</td>
-							<td th:text="${fornecedor.contato} + ', ' + ${fornecedor.telefone}">123</td>
+							<td
+								th:text="${fornecedor.contato} + ', ' + ${fornecedor.telefone}">123</td>
 							<td th:text="${fornecedor.email}">123</td>
 							<td class="text-center">
 								<form method="POST" th:onsubmit="'return confirm(\'Posso remover o fornecedor: ' + 
-								${fornecedor.nome} + ' da base de dados?\');'" 
-								th:action="@{/fornecedores/excluir/{id}(id=${fornecedor.id})}">
-								<a class="btn btn-primary btn-sm" th:href="@{/fornecedores/editar/{id}(id=${fornecedor.id})}"
+									${fornecedor.nome} + ' da base de dados?\');'"
+									th:action="@{/fornecedores/excluir/{id}(id=${fornecedor.id})}">
+									<a class="btn btn-primary btn-sm"
+										th:href="@{/fornecedores/editar/{id}(id=${fornecedor.id})}"
 										th:title="Editar"> <span class="fas fa-pencil-alt"></span>
-								</a>
-								<a	class="btn btn-success btn-sm"
+									</a> <a class="btn btn-success btn-sm"
 										th:href="@{/fornecedores/produtos/selecao/{id}(id=${fornecedor.id})}"
-										th:title="Animais"> <span class="fas fa-dolly"></span>
-								</a>
-								<input type="hidden" name="_method" value="DELETE"/>
-									<button type="submit" class="btn btn-danger btn-sm" title="Excluir">
+										th:title="Produtos"> <span class="fas fa-dolly"></span>
+									</a> <input type="hidden" name="_method" value="DELETE" />
+									<button type="submit" class="btn btn-danger btn-sm"
+										title="Excluir">
 										<i class="far fa-trash-alt"></i>
 									</button>
 								</form>
@@ -68,11 +74,13 @@
 						</tr>
 
 						<tr>
-							<td colspan="7" th:if="${fornecedores.empty}">Nenhum fornecedor cadastrado!!!</td>
+							<td colspan="7" th:if="${fornecedores.empty}">Nenhum
+								fornecedor cadastrado!!!</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
+		</div>
 	</section>
 
 </body>
